--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "surf-report",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jaredreando.github.io/surf-report/",
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
